--- a/package.json
+++ b/package.json
@@ -1,14 +1,26 @@
 {
   "name": "d3-capabilitiesapi",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is a short introduciton on how to use the Qlik Sense Capabilities API.  \r For this page we make the assumptions that the QS server and the webserver is seperated.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Alexander Karlsson <akl@qlik.com>",
   "license": "ISC",
-  "dependencies": {
-    "d3": "^3.5.16"
-  }
+  "dependencies": {},
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mindspank/d3-capabilitiesapi.git"
+  },
+  "keywords": [
+    "qlik",
+    "sense",
+    "d3"
+  ],
+  "bugs": {
+    "url": "https://github.com/mindspank/d3-capabilitiesapi/issues"
+  },
+  "homepage": "https://github.com/mindspank/d3-capabilitiesapi#readme"
 }
